--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Il mio viaggio a Londra</title>
 </head>
 <body>
+
+<!-- Parte iniziale -->
+
     <header>
         <h1>Il mio Viaggio a Londra</h1>
         <img src="img/pexels-bill-emrich-230794-0.jpg" alt="img00">
@@ -14,6 +17,8 @@
         <img src="img/pexels-bill-emrich-230794-2.jpg" alt="img02">
         <hr>
     </header>
+
+<!-- Le mie spese + tabella -->
     
     <main>
         <div>
@@ -62,16 +67,20 @@
 
     </main>
 
+<!-- Liste cose da fare -->
+
     <div>
         <h3>Cose da fare</h3>
         <ul>
             <li>Visitare la Tower of London &#65794;</li>
             <li>Visitare Greenwich &#10003;</li>
-            <li>Ascoltare un artista di strada a Covent Garden&#10003;</li>
+            <li>Ascoltare un artista di strada a Covent Garden &#10003;</li>
             <li>Mangiare il tipico Fish and Chips inglese &#65794;</li>
         </ul>
         <hr>
     </div>
+
+<!-- Info utili -->
 
     <div>
         <h3>Info utili:</h3>
@@ -102,6 +111,8 @@
         </ol>
         <hr>
     </div>
+
+    <!-- Foto ricordo -->
 
     <div>
         <h3>Le foto</h3>
